<?xml version="1.0"?>
<package format="2">
  <name>rtcloader</name>
  <version>0.0.0</version>
  <description>The rtcloader package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <exec_depend>openrtm_aist</exec_depend>
  <exec_depend>openrtm_aist_python</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
